--- a/source/Kalmthout_analyse.Rmd
+++ b/source/Kalmthout_analyse.Rmd
@@ -50,4 +50,52 @@ data$Component %>% unique()
 # pH.VELD, TEMP.VELD
 ```
 
+# functies
+```{r}
+# genereer plot en sla op
+save_plot <- function(dataset, component, naam, title = NULL, xas = NULL, yas = NULL, naam_linetype = NULL, labels_linetype = NULL){
+  figuur <- dataset %>%
+    filter(AquaComponent %in% component) %>%  
+    ggplot(aes(x = FieldSamplingDate, y = ResultFormattedNumeric, color = label, linetype = FieldSampleID)) +
+    scale_x_date(date_breaks = "1 month", date_labels = "%b-%Y") + # visualiseert data per maand in format maand-jaar
+    geom_line(size = 1) +
+    geom_point() +
+    labs(title = title) + xlab(xas) + ylab(yas) +
+  scale_linetype_discrete(name = naam_linetype, labels = labels_linetype)
+  print(figuur)
+  ggsave(plot = figuur,
+         filename = paste0("./exports/NKP_", naam, ".jpg"), width = 9, height = 6)
+}
+
+# puur om plot te genereren
+maak_plot <- function(dataset, component, title = NULL, xas = NULL, yas = NULL, naam_linetype = NULL, labels_linetype = NULL){
+  figuur <- dataset %>%
+    filter(AquaComponent %in% component) %>%  
+    ggplot(aes(x = FieldSamplingDate, y = ResultCalc, color = label, linetype = FieldSampleID)) +
+    scale_x_date(date_breaks = "1 month", date_labels = "%b-%Y") + # visualiseert data per maand in format maand-jaar
+    geom_line(size = 1) +
+    geom_point() +
+    labs(title = title) + xlab(xas) + ylab(yas) +
+  scale_linetype_discrete(name = naam_linetype, labels = labels_linetype)
+  figuur
+}
+
+# plots genereren voor 1 variabele (trendlijn randzone + trendlijn zonnepanelen)
+maak_plot_1var <- function(dataset, component, title = NULL, xas = "Datum staalname", yas = NULL){
+  figuur <- dataset %>%
+    filter(AquaComponent %in% component) %>%  
+    ggplot(aes(x = FieldSamplingDate, y = ResultCalc, color = FieldSampleID)) +
+    scale_x_date(date_breaks = "1 month", date_labels = "%b-%Y") + # visualiseert data per maand in format maand-jaar
+    geom_line(size = 1) +
+    geom_point() +
+    labs(title = title) + xlab(xas) + ylab(yas) +
+  scale_color_discrete(name = "Locatie", labels = c("Randzone", "Zonnepanelen"))
+  figuur
+}
+```
+
+
+```{r}
+
+```
 
