--- a/source/Kalmthout_analyse.Rmd
+++ b/source/Kalmthout_analyse.Rmd
@@ -1,7 +1,6 @@
-
 ---
-title: "Kalmthout_analyse"
-author: "Florian Van Hecke"
+title: "Analyse data Kalmthout"
+author: "Florian"
 date: "`r Sys.Date()`"
 output: 
   html_document:
@@ -42,6 +41,7 @@ library(readxl)
 library(dplyr)
 library(ggplot2)
 library(stringr)
+library(scales)
 ```
 
 ```{r}
@@ -76,7 +76,7 @@ save_plot <- function(dataset, component, naam, title = NULL, xas = NULL, yas = 
     filter(Component %in% component) %>%  
     ggplot(aes(x = FieldSamplingDate, y = ResultFormattedNumeric, color = Label, linetype = CODE)) +
     scale_x_date(date_breaks = "1 month", date_labels = "%b-%Y") + # visualiseert data per maand in format maand-jaar
-    geom_line(size = 1) +
+    geom_line(linewidth = 1) +
     geom_point() +
     labs(title = title) + xlab(xas) + ylab(yas) +
   scale_linetype_discrete(name = naam_linetype, labels = labels_linetype)
@@ -91,7 +91,7 @@ maak_plot <- function(dataset, component, title = NULL, xas = NULL, yas = NULL, 
     filter(Component %in% component) %>%  
     ggplot(aes(x = FieldSamplingDate, y = ResultFormattedNumeric, color = Label, linetype = CODE)) +
     scale_x_date(date_breaks = "1 month", date_labels = "%b-%Y") + # visualiseert data per maand in format maand-jaar
-    geom_line(size = 1) +
+    geom_line(linewidth = 1) +
     geom_point() +
     labs(title = title) + xlab(xas) + ylab(yas) +
   scale_linetype_discrete(name = naam_linetype, labels = labels_linetype)
@@ -104,7 +104,7 @@ maak_plot_1var <- function(dataset, component, title = NULL, xas = "Datum staaln
     filter(Component %in% component) %>%  
     ggplot(aes(x = FieldSamplingDate, y = ResultFormattedNumeric, color = CODE)) +
     scale_x_date(date_breaks = "1 month", date_labels = "%b-%Y") + # visualiseert data per maand in format maand-jaar
-    geom_line(size = 1) +
+    geom_line(linewidth = 1) +
     geom_point() +
     labs(title = title) + xlab(xas) + ylab(yas)
   figuur
@@ -134,6 +134,7 @@ O2_verz_max <- 120 # BVR
 
 # Zuurtegraad
 pH_max <- 5.5 # Synbiosys/Runhaar (2008/2009); Van Calster et al., 2020
+# pH_max <- 6.5 # BVR 2010
 pH_min <- 4.5 # BVR 2010
 ```
 
@@ -156,14 +157,7 @@ T.P_max %>%
 # plot TP
 ## AN_KAL_003
 maak_plot_1var(data %>% filter(CODE %in% "AN_KAL_003"), "T.P", "Totale fosfor", yas = "Meetwaarde (mg P/L)")
-maak_plot(data, "T.P", " Totale fosfor Kalmthout", yas = "Meetwaarde (mg P/L)")
-
-# TP voor alle locaties
-data %>%
-  filter(Component %in% "T.P") %>%
-  ggplot(aes(x = FieldSamplingDate, y = ResultFormattedNumeric, colour = CODE)) +
-  geom_line(size = 1) +
-    scale_x_date(date_breaks = "1 month", date_labels = "%b-%Y")
+maak_plot_1var(data, "T.P", "Totale fosfor Kalmthout", yas = "Meetwaarde (mg P/L)")
 
 # plot TN
 maak_plot_1var(data %>% filter(CODE %in% c("AN_KAL_002", "AN_KAL_003")), "T.N", "Totale stikstof", yas = "Meetwaarde (mg N/L)")
@@ -215,8 +209,17 @@ for (ID in locaties) {
     geom_hline(yintercept = 0.03)
   print(figuur)
 }
-```
 
+# gebruik functie maak_plot_1var
+for (ID in locaties) {
+  figuur <- maak_plot_1var(data %>% filter(CODE %in% ID), "T.P" , paste("Totale fosfor", ID), yas = "Meetwaarde (mg P/L)") + geom_hline(yintercept = 0.03, color = "black", linetype = "dashed", size = 1) +
+  scale_y_continuous(breaks = pretty_breaks(n = 10))
+  print(figuur)
+  ggsave(plot = figuur,
+         filename = paste0("./exports/TP/", ID,"_TP", ".jpg"), width = 1080, height = 720, units = "px", scale = 3)
+}
+
+```
 
 
 
