--- a/source/Kalmthout_analyse.Rmd
+++ b/source/Kalmthout_analyse.Rmd
@@ -597,18 +597,42 @@ maucha(datawide)
 
 # IR-EGV diagram
 ```{r}
-# gemiddelde Cl en Ca concentraties per locatie
-mean_Cl <- mean(data$ResultCalc[data$AquaComponent == "Cl"])
-mean_Ca <- mean(data$ResultCalc[data$AquaComponent == "Ca"])
-
-# ionenratio 
-ionrat <- ((mean_Ca*2)/40.078) / (((mean_Ca*2)/40.078) + (mean_Cl/35.453))
-ionrat
-
-# gemiddeld EGV
-mean_EGV <- mean(data$ResultCalc[data$AquaComponent == "EGV25_veld"])
-mean_EGV
+ref_punten <- data.frame(
+      location_ref = c("Li (Angeren)", "At (Witteveen)", "Th (Noordwijk)"),
+      Ca_ref = c(115, 0.4, 420),
+      Cl_ref = c(11, 3, 19100),
+      ec25_ref = c(651, 50.1, 52000), # in µS/cm
+      ir_ref = c(.95, .20, .04), # without units (in 0-1)
+      name_ref = c("Li", "At", "Th"))
 ```
 
+```{r}
+# gemiddelde Cl en Ca concentraties per locatie
+IREGVdata <- data %>% 
+  filter(Component %in% c("Ca", "Cl", "EC25.VELD")) %>%
+  group_by(CODE, Component) %>% summarise(gemiddelde = mean(ResultFormattedNumeric))
+
+# naar wide format (componenten als kolommen)
+IREGVwide <- pivot_wider(IREGVdata, names_from = Component, values_from = gemiddelde)
+
+# bereken en voeg IR toe als kolom
+IREGVwide <- IREGVwide %>%
+  mutate(IR = ((Ca*2)/40.078) / (((Ca*2)/40.078) + (Cl/35.453)), name_ref = CODE)
+
+```
+
+## plot IR_EGV diagram
+```{r}
+p1 <- ggplot(ref_punten, aes(x = ec25_ref, y = ir_ref, label = name_ref)) +
+  geom_point(size = 2) + 
+  scale_x_log10() + 
+  xlab("EGV (µS/cm)") + 
+  ylab("IR (%)") + 
+  scale_y_continuous(breaks = seq(0,1, by = 0.1)) + 
+  ggtitle("IR-EGV diagram Kalmthout") + 
+  geom_text(hjust = - 0.5, vjust = - 0.5)
+# voeg locaties Kalmthout toe
+p1 + geom_point(data = IREGVwide, mapping = aes(x = EC25.VELD, y = IR), color = "red")
+```
 
 
