--- a/source/Kalmthout_analyse.Rmd
+++ b/source/Kalmthout_analyse.Rmd
@@ -102,7 +102,7 @@ for (Variabele in Componenten) {
 # genereer plot en sla op
 save_plot <- function(dataset, component, naam, title = NULL, xas = NULL, yas = NULL, naam_linetype = NULL, labels_linetype = NULL){
   figuur <- dataset %>%
-    filter(Component %in% component) %>%  
+    filter(AquaComponent %in% component) %>%  
     ggplot(aes(x = FieldSamplingDate, y = ResultCalc, color = Label, linetype = CODE)) +
     scale_x_date(date_breaks = "1 month", date_labels = "%b-%Y") + # visualiseert data per maand in format maand-jaar
     geom_line(linewidth = 1) +
@@ -117,7 +117,7 @@ save_plot <- function(dataset, component, naam, title = NULL, xas = NULL, yas = 
 # puur om plot te genereren
 maak_plot <- function(dataset, component, title = NULL, xas = NULL, yas = NULL, naam_linetype = NULL, labels_linetype = NULL){
   figuur <- dataset %>%
-    filter(Component %in% component) %>%  
+    filter(AquaComponent %in% component) %>%  
     ggplot(aes(x = FieldSamplingDate, y = ResultCalc, color = Label, linetype = CODE)) +
     scale_x_date(date_breaks = "1 month", date_labels = "%b-%Y") + # visualiseert data per maand in format maand-jaar
     geom_line(linewidth = 1) +
@@ -130,7 +130,7 @@ maak_plot <- function(dataset, component, title = NULL, xas = NULL, yas = NULL, 
 # plots genereren voor 1 variabele (trendlijn randzone + trendlijn zonnepanelen)
 maak_plot_1var <- function(dataset, component, title = NULL, xas = "Datum staalname", yas = NULL){
   figuur <- dataset %>%
-    filter(Component %in% component) %>%  
+    filter(AquaComponent %in% component) %>%  
     ggplot(aes(x = FieldSamplingDate, y = ResultCalc, color = CODE)) +
     scale_x_date(date_breaks = "1 month", date_labels = "%b-%Y") + # visualiseert data per maand in format maand-jaar
     geom_line(linewidth = 1) +
@@ -260,7 +260,6 @@ for (ID in locaties) {
 ### Totale stikstof
 ```{r}
 locaties <- unique(data$CODE)
-
 
 for (ID in locaties) {
   figuur <- maak_plot_1var(data %>% filter(CODE %in% ID), "T.N" , paste("Totale stikstof T.N", ID, "+ MKN Zomerhalfjaargemiddelde"), yas = "Meetwaarde (mg N/L)") + geom_hline(yintercept = 1.3, color = "black", linetype = "dashed", linewidth = 1) +
@@ -439,8 +438,10 @@ for (ID in locaties) {
 
 ## Zoutgehalte
 ```{r}
-locaties <- unique(data$CODE)
+
+
 # SO4
+locaties <- unique(data$CODE)
 for (ID in locaties) {
   figuur <- maak_plot_1var(data %>% filter(CODE %in% ID), "SO4" , paste("Sulfaat + MKN gemiddelde", ID), yas = "Meetwaarde (mg/L)") +
   scale_y_continuous(breaks = pretty_breaks(n = 10, min.n = 10)) + geom_hline(yintercept = 15, linewidth = 1, colour = "black", linetype = "dashed")
@@ -450,13 +451,20 @@ for (ID in locaties) {
 }
 
 # SO4_S
+locaties <- unique(data$CODE)
+
 for (ID in locaties) {
   figuur <- maak_plot_1var(data %>% filter(CODE %in% ID), "SO4_S" , paste("Sulfaat-S", ID), yas = "Meetwaarde (mg S/L)") +
-  scale_y_continuous(breaks = pretty_breaks(n = 10, min.n = 10)) + geom_hline(yintercept = 15, linewidth = 1, colour = "black", linetype = "dashed")
+  scale_y_continuous(breaks = pretty_breaks(n = 10, min.n = 10))
   print(figuur)
   ggsave(plot = figuur,
          filename = paste0("./exports/SO4_S/", ID,"_SO4_S", ".jpg"), width = 1080, height = 720, units = "px", scale = 3)
 }
+
+
+maak_plot_1var(data %>% filter(CODE %in% "ANTKAL0384"), "SO4_S" , paste("Sulfaat-S", ID), yas = "Meetwaarde (mg S/L)") +
+  scale_y_continuous(breaks = pretty_breaks(n = 10, min.n = 10)) + geom_hline(yintercept = 15, linewidth = 1, colour = "black", linetype = "dashed")
+
 
 # EC25.VELD
 for (ID in locaties) {
